# bridge-lesson-packaging

./: CONTRACT.md  README.md  collection.example.toml  deal-survey-spec.md  package.sh  stats.py
.github/workflows/: ci.yml
configs/: example.conf  large-lessons.conf  small-play.conf
deal-survey/: .gitignore  Cargo.toml  editorial.example.toml  topics.example.toml  topics.toml
deal-survey/calibration/: calibration.pbn
deal-survey/src/: hash.rs  html.rs  main.rs  model.rs  profile.rs  report.rs  topics.rs
deal-survey/src/scan/: cardplay.rs  contract.rs  dd.rs  mod.rs  probe.rs  structural.rs
